[package]
name = "kanidm_unix_int"
version = "1.1.0-alpha.8"
authors = ["William Brown <william@blackhats.net.au>"]
rust-version = "1.59"
edition = "2021"
license = "MPL-2.0"
description = "Kanidm Unix Integration Clients"
documentation = "https://docs.rs/kanidm/latest/kanidm/"
homepage = "https://github.com/kanidm/kanidm/"
repository = "https://github.com/kanidm/kanidm/"

[lib]
name = "kanidm_unix_common"
path = "src/lib.rs"

[[bin]]
name = "kanidm_unixd"
path = "src/daemon.rs"

[[bin]]
name = "kanidm_unixd_tasks"
path = "src/tasks_daemon.rs"

[[bin]]
name = "kanidm_ssh_authorizedkeys"
path = "src/ssh_authorizedkeys.rs"

[[bin]]
name = "kanidm_cache_invalidate"
path = "src/cache_invalidate.rs"

[[bin]]
name = "kanidm_cache_clear"
path = "src/cache_clear.rs"

[[bin]]
name = "kanidm_unixd_status"
path =  "src/daemon_status.rs"

[[bin]]
name = "kanidm_test_auth"
path =  "src/test_auth.rs"

[dependencies]
kanidm_client = { path = "../kanidm_client" }
kanidm_proto = { path = "../kanidm_proto" }
kanidm = { path = "../kanidmd/idm" }

tracing = "^0.1.34"
tracing-subscriber = "^0.3.11"

toml = "^0.5.9"
rpassword = "^6.0.1"
tokio = { version = "^1.18.0", features = ["rt", "macros", "sync", "time", "net", "io-util"] }
tokio-util = { version = "^0.7.1", features = ["codec"] }

futures = "^0.3.21"
bytes = "^1.1.0"

libc = "^0.2.125"
serde = { version = "^1.0.137", features = ["derive"] }
serde_cbor = "^0.11.2"
structopt = { version = "0.3.26", default-features = false }

libsqlite3-sys = "0.24.2"
rusqlite = "^0.27.0"
r2d2 = "^0.8.9"
r2d2_sqlite = "^0.20.0"

reqwest = "^0.11.10"

users = "^0.11.0"
#async-std = { version = "^1.11.0", features = ["tokio1"] }


lru = "^0.7.5"

[features]
# default = [ "libsqlite3-sys/bundled" ]

[dev-dependencies]
# kanidm = { path = "../kanidmd/idm" }
score = { path = "../kanidmd/score" }

[build-dependencies]
structopt = { version = "^0.3.26", default-features = false }
profiles = { path = "../profiles" }

