# cargo-features = ["default-run"]

[package]
name = "kanidm"
version = "1.1.0-alpha.3"
authors = ["William Brown <william@blackhats.net.au>"]
# default-run = "kanidm_core"
edition = "2018"
license = "MPL-2.0"
description = "Kanidm Server Library and Binary"
documentation = "https://docs.rs/kanidm/latest/kanidm/"
homepage = "https://github.com/kanidm/kanidm/"
repository = "https://github.com/kanidm/kanidm/"

[lib]
name = "kanidm"
path = "src/lib/lib.rs"

[[bin]]
name = "kanidmd"
path = "src/server/main.rs"

# [[bench]]
# name = "kanidm_benchmark"
# harness = false


[dependencies]
kanidm_proto = { path = "../kanidm_proto", version = "1.1.0-alpha" }

url = "2.1"
tide = "0.15"
async-trait = "0.1"
async-h1 = "2.0"
tide-rustls = "0.1"
fernet = { git = "https://github.com/mozilla-services/fernet-rs.git" }

async-std = "1.6"

log = "0.4"
env_logger = "0.7"
rand = "0.7"
toml = "0.5"

chrono = "0.4"
regex = "1"
lazy_static = "1.2.0"

futures = "0.3"
futures-util = "0.3"
tokio = { version = "0.2", features = ["rt-threaded", "macros", "rt-util", "sync", "time", "net", "io-util", "signal"] }
tokio-util = { version = "0.3", features = ["codec"] }
tokio-openssl = "0.4"
openssl = "0.10"

uuid = { version = "0.8", features = ["serde", "v4" ] }
serde = "1.0"
serde_cbor = "0.11"
serde_json = "1.0"
serde_derive = "1.0"

libsqlite3-sys = { version = "0.18" }
rusqlite = { version = "0.23", features = ["backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.16"

structopt = { version = "0.3", default-features = false }
time = { version = "0.2", features = ["serde", "std"] }

hashbrown = "0.8"
concread = "^0.2.5"
# concread = { version = "^0.2.5", features = ["simd_support"] }
# concread = { path = "../../concread" }
# concread = { path = "../../concread", features = ["asynch"] }
# crossbeam = "0.7"

sshkeys = "0.3"

rpassword = "4.0"
num_cpus = "1.10"

idlset = { version = "0.1" , features = ["use_smallvec"] }
# idlset = { path = "../../idlset", features = ["use_smallvec"] }

zxcvbn = "2.0"
base64 = "0.12"

ldap3_server = "0.1"
# ldap3_server = { path = "../../ldap3_server" }

webauthn-rs = "0.3.0-alpha.1"
# webauthn-rs = { path = "../../webauthn-rs" }

libc = "0.2"
users = "0.10"

smartstring = { version = "0.2", features = ["serde"] }

[features]
# default = [ "libsqlite3-sys/bundled", "openssl/vendored" ]

[dev-dependencies]
criterion = "0.3"
# For testing webauthn
webauthn-authenticator-rs = "0.3.0-alpha.1"
# webauthn-authenticator-rs = { path = "../../webauthn-authenticator-rs" }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt"]
