[package]
name = "kanidm"
version = "1.1.0-alpha.5"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2018"
license = "MPL-2.0"
description = "Kanidm Server Library and Binary"
documentation = "https://docs.rs/kanidm/latest/kanidm/"
homepage = "https://github.com/kanidm/kanidm/"
repository = "https://github.com/kanidm/kanidm/"

[lib]
name = "kanidm"
path = "src/lib/lib.rs"

[[bin]]
name = "kanidmd"
path = "src/server/main.rs"

[dependencies]
kanidm_proto = { path = "../kanidm_proto", version = "1.1.0-alpha" }

jemallocator = { version = "0.3.0", optional = true }

url = { version = "2", features = ["serde"] }
tide = "0.16"
tide-rustls = "0.3"
async-trait = "0.1"
async-h1 = "2.0"
fernet = { version = "^0.1.4", features = ["fernet_danger_timestamps"] }
bundy = "^0.1.1"

async-std = "1.6"

log = "0.4"
env_logger = "0.8"
rand = "0.8"
toml = "0.5"

chrono = "0.4"
regex = "1"
lazy_static = "1.2.0"

futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-openssl = "0.6"
openssl = "0.10"

uuid = { version = "0.8", features = ["serde", "v4" ] }
serde = "1.0"
serde_cbor = "0.11"
serde_json = "1.0"
serde_derive = "1.0"

libsqlite3-sys = { version = "0.22" }
rusqlite = { version = "0.25", features = ["backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.18"

structopt = { version = "0.3", default-features = false }
time = { version = "0.2", features = ["serde", "std"] }

hashbrown = "0.11"
concread = "^0.2.16"
# concread = { version = "^0.2.9", path = "../../concread" }
# concread = { version = "^0.2.9", features = ["simd_support"] }

sshkeys = "^0.3.1"

rpassword = "5.0"
num_cpus = "1.10"

zxcvbn = "2.0"
base64 = "0.13"

idlset = { version = "^0.2" }
# idlset = { version = "^0.2", path = "../../idlset" }

ldap3_server = "0.1"
webauthn-rs = "0.3.0-alpha.9"

libc = "0.2"
users = "0.11"

smartstring = { version = "0.2", features = ["serde"] }

validator = { version = "0.14" }

touch = "0.0.1"
filetime = "0.2.14"

[features]
simd_support = [ "concread/simd_support" ]
# default = [ "libsqlite3-sys/bundled", "openssl/vendored" ]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
# For testing webauthn
webauthn-authenticator-rs = "0.3.0-alpha.10"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt"]

[build-dependencies]
structopt = { version = "0.3", default-features = false }
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"

[[bench]]
name = "scaling_10k"
harness = false

