[package]
name = "kanidmd_web_ui"
description = "Kanidm Server Web User Interface"
documentation = "https://docs.rs/kanidm/latest/kanidm/"
version = "1.1.0-alpha.11-dev"
authors = [
    "William Brown <william@blackhats.net.au>",
    "James Hodgkinson <james@terminaloutcomes.com>",
    ]
rust-version = "1.59"
edition = "2021"
license = "MPL-2.0"
homepage = "https://github.com/kanidm/kanidm/"
repository = "https://github.com/kanidm/kanidm/"


# These are ignored because the crate is in a workspace
#[profile.release]
# less code to include into binary

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
compact_jwt = { version = "^0.2.3", default-features = false, features = ["unsafe_release_without_verify"] }
gloo = "^0.8.0"
gloo-net = "0.2.5"
js-sys = "^0.3.58"
kanidm_proto = { path = "../kanidm_proto", features = ["wasm"] }
qrcode = { version = "^0.12.0", default-features = false, features = ["svg"] }
serde = { version = "^1.0.148", features = ["derive"] }
serde_json = "^1.0.89"
serde-wasm-bindgen = "0.4"
uuid = "^1.2.1"
wasm-bindgen = { version = "^0.2.81" }
wasm-bindgen-futures = { version = "^0.4.30" }
wasm-bindgen-test = "0.3.33"
url = "^2.3.1"
yew = "^0.19.3"
yew-agent = "^0.1.0"
yew-router = "^0.16.0"


[dependencies.web-sys]
version = "^0.3.60"
features = [
    "AuthenticationExtensionsClientOutputs",
    "AuthenticatorResponse",
    "CredentialCreationOptions",
    "CredentialRequestOptions",
    "CredentialsContainer",
    "DomTokenList",
    "Element",
    "Event",
    "FocusEvent",
    "FormData",
    "Headers",
    "HtmlButtonElement",
    "HtmlDocument",
    "HtmlFormElement",
    "Navigator",
    "PublicKeyCredential",
    "PublicKeyCredentialCreationOptions",
    "PublicKeyCredentialRpEntity",
    "PublicKeyCredentialUserEntity",
    "Request",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "Window",
]

