[package]
name = "orca"
version = "1.1.0-alpha.8"
authors = ["William Brown <william@blackhats.net.au>"]
rust-version = "1.59"
edition = "2021"
license = "MPL-2.0"
description = "Orca - load testing for LDAP and Kanidm"
documentation = "https://docs.rs/kanidm/latest/kanidm/"
homepage = "https://github.com/kanidm/kanidm/"
repository = "https://github.com/kanidm/kanidm/"

[[bin]]
name = "orca"
path = "src/main.rs"

[dependencies]
tikv-jemallocator = "0.5.0"
tracing = "^0.1.34"
tracing-subscriber = "^0.3.11"

structopt = { version = "^0.3.26", default-features = false }

uuid = { version = "^1.0.0", features = ["serde", "v4" ] }
csv = "1.1.6"
serde = { version = "^1.0.137", features = ["derive"] }
serde_json = "^1.0.80"

rand = "^0.8.5"
toml = "^0.5.9"

kanidm_proto = { path = "../kanidm_proto" }
kanidm_client = { path = "../kanidm_client" }

tokio = { version = "^1.18.0", features = ["rt-multi-thread"] }
tokio-util = { version = "^0.7.2", features = ["codec"] }
tokio-openssl = "^0.6.3"
futures-util = { version = "^0.3.21", features = ["sink"] }
openssl = "^0.10.38"

ldap3_proto = "^0.2.3"

crossbeam = "0.8.1"

mathru = "^0.12.0"

dialoguer = "0.10.1"

[build-dependencies]
profiles = { path = "../profiles" }
