[package]
name = "orca"
version = "1.1.0-alpha.9"
authors = ["William Brown <william@blackhats.net.au>"]
rust-version = "1.59"
edition = "2021"
license = "MPL-2.0"
description = "Orca - load testing for LDAP and Kanidm"
documentation = "https://docs.rs/kanidm/latest/kanidm/"
homepage = "https://github.com/kanidm/kanidm/"
repository = "https://github.com/kanidm/kanidm/"

[[bin]]
name = "orca"
path = "src/main.rs"

[dependencies]
clap = { version = "^3.2", features = ["derive"] }
crossbeam = "0.8.1"
csv = "1.1.6"
dialoguer = "0.10.1"
futures-util = { version = "^0.3.21", features = ["sink"] }
kanidm_client = { path = "../kanidm_client" }
kanidm_proto = { path = "../kanidm_proto" }
ldap3_proto = "^0.2.3"
mathru = "^0.13.0"
openssl = "^0.10.41"
rand = "^0.8.5"
serde = { version = "^1.0.142", features = ["derive"] }
serde_json = "^1.0.83"
tokio = { version = "^1.21.1", features = ["rt-multi-thread"] }
tokio-openssl = "^0.6.3"
tokio-util = { version = "^0.7.4", features = ["codec"] }
toml = "^0.5.9"
tracing = "^0.1.35"
tracing-subscriber = "^0.3.14"
uuid = { version = "^1.1.2", features = ["serde", "v4" ] }

[target.'cfg(not(target_family = "windows"))'.dependencies]
tikv-jemallocator = "0.5"


[build-dependencies]
profiles = { path = "../profiles" }
