[package]
name = "profiles"
version = "1.1.0"
authors = ["William Brown <william@blackhats.net.au>"]
rust-version = "1.59"
edition = "2021"
license = "MPL-2.0"
description = "Kanidm Build System Profiles"
documentation = "https://docs.rs/kanidm/latest/kanidm/"
homepage = "https://github.com/kanidm/kanidm/"
repository = "https://github.com/kanidm/kanidm/"

[lib]
name = "profiles"
path = "src/lib.rs"

[dependencies]
serde = { version = "^1.0.136", features = ["derive"] }
toml = "^0.5.9"
base64 = "^0.13.0"

[build-dependencies]
base64 = "^0.13.0"
