
[project]
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
license = { text = "MPL-2.0" }
requires-python = "<4.0,>=3.12"
dependencies = [
    "toml>=0.10.2",
    "pydantic>=2.12.5",
    "aiohttp>=3.8.1",
    "Authlib>=1.2.0",
    "python-dateutil>=2.9.0.post0",
    "aiohttp-retry>=2.9.1",
    "typing-extensions>=4.15.0",
]
name = "kanidm"
description = "Kanidm client library"
version = "1.3.0"
readme = "README.md"

keywords = ["kanidm", "idm", "api"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://kanidm.com/"
repository = "https://github.com/kanidm/kanidm"

[project.scripts]
kanidm_openapi_codegen = "kanidm.openapi_codegen:main"

[project.optional-dependencies]
openapi_codegen = ["docker>=7.1.0"]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "pytest>=9.0.2",
    "mypy>=1.19.1",
    "types-requests>=2.32.0.20241016",
    "pytest-aiohttp>=1.1.0",
    "pytest-mock>=3.15.1",
    "types-toml>=0.10.8.20240310",
    "pylint-pydantic>=0.4.1",
    "coverage>=7.13.1",
    "pook>=2.1.3",
    "ty>=0.0.17",
    "openapi-spec-validator>=0.7.2",
    "coveralls>=4.0.2",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-material>=9.7.2",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.10",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm.build]
includes = ["kanidm", "kanidm_openapi_client"]

[tool.ruff]
line-length = 150

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "F401", # unused import, reused fixtures across all tests
    "F811", # pytest fixtures
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "network: Tests that require network access and a working backend server",
    "interactive: Requires specific config and a working backend server",
    "openapi: Tests that require network access and a live kanidm server",
]

[tool.coverage.run]
source = ["kanidm"]
omit = ["tests"]

[tool.mypy]
strict = true
plugins = "pydantic.mypy"
disable_error_code = "unused-ignore"
