[package]
name = "rsidm_proto"
version = "0.1.0"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2018"

[features]
rsidm_internal = ["actix"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
actix = { version = "0.7", optional = true }

