# cargo-features = ["default-run"]

[package]
name = "rsidm"
version = "0.1.0"
authors = ["William Brown <william@blackhats.net.au>"]
# default-run = "rsidm_core"
edition = "2018"

[lib]
name = "rsidm"
path = "src/lib/lib.rs"

[[bin]]
name = "rsidmd"
path = "src/server/main.rs"


[dependencies]
rsidm_proto = { path = "../rsidm_proto" }

actix = "0.7"
actix-web = { version = "0.7", features = ["ssl"] }

bytes = "0.4"
log = "0.4"
env_logger = "0.6"
rand = "0.6"

chrono = "0.4"
cookie = "0.11"
regex = "1"
lazy_static = "1.2.0"
lru = "0.1"

tokio = "0.1"
futures = "0.1"
uuid = { version = "0.7", features = ["serde", "v4" ] }
serde = "1.0"
serde_cbor = "0.10"
serde_json = "1.0"
serde_derive = "1.0"

rusqlite = { version = "0.15", features = ["backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.7"

structopt = { version = "0.2", default-features = false }
time = "0.1"

concread = "0.1"

openssl = "0.10"

rpassword = "0.4"
num_cpus = "1.10"

