[package]
name = "kanidm_win_authlib"
description = "Kanidm Windows Client"
documentation = "https://docs.rs/kanidm/latest/kanidm/"

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
kanidm_client.workspace = true
kanidm_proto.workspace = true
once_cell = "1.17"
r2d2.workspace = true
r2d2_sqlite.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender = "0.2"
tracing-subscriber.workspace = true

[dependencies.windows]
version = "0.48"
features = [
	"Win32_Security_Authentication_Identity",
	"Win32_Foundation",
	"Win32_Security_Credentials",
	"Win32_System_Kernel",
	"Win32_System_Threading",
	"Win32_System_SystemInformation",
]
